--- a/themes/hugo-theme-cleanwhite/layouts/partials/sidebar.html
+++ b/themes/hugo-theme-cleanwhite/layouts/partials/sidebar.html
@@ -13,7 +13,7 @@
 	<!--<hr><h5><a href="{{ "/about" | relLangURL }}">ABOUT ME</a></h5>-->
         <div class="short-about">
             {{ with .Site.Params.sidebar_avatar }}
-            <a href="{{ "/about" | relLangURL }}">
+            <a href="{{ "/top/about" | relLangURL }}">
                <img src="{{ . | relURL }}" alt="avatar" style="cursor: pointer" />
             </a>
             {{ end }}
